	* add several missing license files
	* add option to force 10 major scale ticks while rounding graphics end values
	* enable class based log level configuration device sub packages (p.e. gde.device.junsi.modbus)
	* enable USB HID device selection while devices with almost identical characteristics connected
	* enable secondary trigger range in properties editor (functional added in 3.4.0)
	
Device specific changes/fixes
	* iChargerUSB - enable program memory control
	* iChargerUSB - correct power/energy calculation for opened files (*.osd)
	* iChargerUSB - add system info string to recording
	* GPS_Logger* - fix latitude, longitude unit which caused display problem while activated
	* Spektrum-Telemetry - make frame loss and holds always visible, even no reasonable data
	* UniSens-E - enable live data gathering
	* iMax B6* - fix missing energy calculation Ni battery type outside cycle

Version 3.4.1 - 03 Feb 2020
Generic changes/fixes
	* add control listener to handle size changes after modifying menu cool bar
	* uniform build execution environment to Java 8 compatible byte code
	* split build in OS dependent steps (future MAC OS does not support 32 bit makensis processing)
	* update swt.jar for Linux 64 bit to fix webkit problems
	* add time stamp of min/max value evaluated
	* update swt.jar for available OS to support future Java versions (new SWT libs available for 64 bit only)
	* update cell voltages for the known different cell types
	* fix missing synchronization between cell voltages and active record set
	* update software widget toolkit (swt) for 64 bit systems to enable support for newer Java run times 

Device specific changes/fixes
	* LiPoWatch - adapt clear memory button position for MAC OS X and Linux
	* Robbe PowerPeak IV - initial implementation
	* HoTTAdapter2 - reset min/max values while detecting valid values
	* SpektrumCSV - simple sample to be used with exports from TLM Viewer
	* Spektrum-Telemetry - add initial implementation
